Fixed the gap in the search list

--- a/style/style.css
+++ b/style/style.css
@@ -117,7 +117,6 @@ header {
     border-bottom-right-radius: 10px;
     display: flex;
     flex-direction: column;
-    gap: .4rem;
     overflow: scroll;
     max-height: 350px;
     width: 100%;
